--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,8 @@
     "browser_action": {
         "default_icon": "logo.svg",
         "default_title": "Alles Tab"
-    }
+    },
+    "permissions": [
+        "storage"
+    ]
 }
