--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,14 @@
             "js": [
                 "alles-sites.js"
             ]
+        },
+        {
+            "matches": [
+                "https://tab.alles.cx/*"
+            ],
+            "js": [
+                "connect.js"
+            ]
         }
     ],
     "permissions": [
