--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -20,7 +20,7 @@
             "is_default": true,
             "encoding": "UTF-8"
         },
-        "homepage": "https://search.alles.cx"
+        "homepage": "https://tab.alles.cx/home"
     },
     "chrome_url_overrides": {
         "newtab": "homepage/index.html"
